--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 * {
-	border: 1px solid blue;
+	/*border: 1px solid blue;*/
 }
 
 /*div[id*="Wrapper"] {
@@ -17,18 +17,33 @@
 	grid-gap: 10px;
 }
 
-.num {
+.tile {
 	display: grid;
 	align-items: center;
 	justify-content: center;
-	width: 50px;
-	height: 50px;
+	width: 3em;
+	height: 3em;
+	user-select: none;
+	-moz-user-select: none;
 }
 
-.selected {
+.playTile {
+	background-color: green;
+	border: 0.1em solid blue;
+	border-radius: 0.5em;
+	cursor: pointer;
+}
+
+.sumTile {
+	background: orange;
+	border-radius: 0.5em;
+	cursor: default;
+}
+
+.selectedTile {
 	color: red;
 }
 
-.sum {
-	background: green;
+.highlight {
+	box-shadow: inset 0 0 0.5em red;
 }
